--- a/Chart.yaml
+++ b/Chart.yaml
@@ -26,5 +26,7 @@ appVersion: "1.16.0"
 dependencies:
   - name: "opensearch"
     version: 2.9.1
+    repository: https://opensearch-project.github.io/helm-charts/
   - name: "opensearch-dashboards"
     version: 2.7.0
+    repository: https://opensearch-project.github.io/helm-charts/
